--- a/index.html
+++ b/index.html
@@ -20,31 +20,40 @@
         <div class="svg-hero" style="height: 150px; overflow: hidden;"><svg viewBox="0 0 500 150" preserveAspectRatio="none"
                 style="height: 100%; width: 100%;">
                 <path d="M0.00,49.98 C149.99,150.00 349.20,-49.98 500.00,49.98 L500.00,150.00 L0.00,150.00 Z"
-                    style="stroke: none; fill: #fff;"></path>
+                    style="stroke: none; fill: #ffffff;"></path>
             </svg></div>
     </header>
     <section id="catalog">
     <section class="wave-contenedor website">
-        <img src="img/product1.jpg" alt="">
+        <img src="img/buzo-los-angeles (1).jpg" alt="">
         <div class="contenedor-textos-main">
-            <h2 class="titulo left">Camiseta Negra </h2>
-            <p class="parrafo">Precio: $ 50.000</p>
+            <h2 class="titulo left">Buzo gris los angeles </h2>
+            <p class="parrafo">Precio: $ 60.000</p>
             <a href="" class="cta">agregar al carrito</a>
         </div>
     </section>
 
     <section class="wave-contenedor website">
-        <img src="img/product2.jpg" alt="">
+        <img src="img/set-buzo (1).jpg" alt="">
         <div class="contenedor-textos-main">
-            <h2 class="titulo left">Camiseta Blanca</h2>
-            <p class="parrafo">Precio: $ 60.000</p>
+            <h2 class="titulo left">Set negro </h2>
+            <p class="parrafo">Precio: $ 185.000</p>
+            <a href="" class="cta">agregar al carrito</a>
+        </div>
+    </section>
+
+    <section class="wave-contenedor website">
+        <img src="img/buzo cafe (1).jpg" alt="">
+        <div class="contenedor-textos-main">
+            <h2 class="titulo left">Buzo cafe drew </h2>
+            <p class="parrafo">Precio: $ 100.000</p>
             <a href="" class="cta">agregar al carrito</a>
         </div>
     </section>
 
     <section class="info">
         <div class="contenedor">
-            <h2 class="titulo left">REVISA NUESTRA GRAN VARIEDAD DE ROPA </h2>
+            <h2 class="titulo left">REVISA NUESTRA GRAN VARIEDAD</h2>
             <p>TENEMOS MUCHAS CLASES DE PROMOCIONES.</p>
         </div>
     </section>
@@ -53,38 +62,23 @@
         <h2 class="titulo">PROMOCIONES</h2>
         <div class="content-cards">
             <article class="card">
-                <img src="img/promotion1.png" alt="">
-                <h3>Pantalon cargo Negro</h3>
-                <p>Precio:$150.000 </p>
+                <img src="img/tennis (1).jpg" alt="">
+                <h3>Zapatos nike negros </h3>
+                <p>Precio:$250.000 </p>
                 <a href="#catalog" class="cta">agragar al carrito</a>
             </article>
-         |
                 <article class="card">
-                    <img src="img/promotion1.png" alt="">
-                    <h3>Pantalon cargo Negro</h3>
-                    <p>Precio:$150.000 </p>
+                    <img src="img/camisa-simsopm_1 (1).png" alt="">
+                    <h3>camisa negra simpson</h3>
+                    <p>Precio:$100.000</p>
                     <a href="#catalog" class="cta">agragar al carrito</a>
                 </article>
             
             <article class="card">
-                <img src="img/promotion1.png" alt="">
+                <img src="img/pantalon-negro (1).jpg" alt="">
                 <h3>Pantalon cargo Negro</h3>
                 <p>Precio:$150.000 </p>
                 <a href="#catalog" class="cta">agragar al carrito</a>
-            </article>
-        </div>
-    </section>
-
-    <section class="galeria">
-        <div class="contenedor">
-            <h2 class="titulo">Our work</h2>
-            <article class="galeria-cont">
-                <img src="img/promotion1.png" alt="">
-                <img src="img/promotion2.png " alt="">
-                <img src="img/buzo-negro.jpg" alt="">
-                <img src="img/cuatro.jpg" alt="">
-                <img src="img/cinco.jpg" alt="">
-                <img src="img/seis.jpg" alt="">
             </article>
         </div>
     </section>
